# sonic-cloud-flutter

./: .dockerignore  .env.example  .firebaseignore  .firebaserc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FEATURES.md  README.md  analysis_options.yaml  firebase.json  firestore.indexes.json  firestore.rules  pubspec.yaml  storage.rules  vercel.json  worklog.md
.agent-ctx/: SESSION_MEMORY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot-automerge.yml  release.yml  stale.yml  ui-test.yml
android/app/: build.gradle  google-services.json
api/: health.dart  health.js  library.dart  library.js  playback.dart  playback.js  sync.js
docker/: nginx.conf
download/sonic_cloud_flutter/: .env.example  .firebaseignore  .firebaserc  .gitignore  .metadata  BACKEND_SYNC_PLAN.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  FEATURES.md  FORKING.md  FUTURE_DEVELOPMENT.md  README.md  codemagic.yaml  docker-compose.yml  firebase.json  netlify.toml  (+3 more)
fastlane/: Fastfile.android  Pluginfile
functions/: index.js  package.json
integration_test/: app_test.dart
lib/: main.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/: Podfile
scripts/: build.sh  deploy_android.sh  deploy_web.sh  firebase_deploy.sh  gen_launcher_icon.py  gen_sample_audio.py  render_screenshots.py  vercel_build.sh  wrap_handlers_with_vercel.py
test/: accessibility_service_test.dart  app_smoke_test.dart  audio_fingerprinter_test.dart  gesture_controls_test.dart  glass_card_test.dart  library_service_test.dart  lyrics_service_test.dart  lyrics_sidecar_test.dart  metadata_service_test.dart  playback_service_test.dart  playback_smart_shuffle_test.dart  playlist_service_test.dart  security_service_test.dart  sonic_glow_button_test.dart  track_row_test.dart  universal_library_test.dart  waveform_progress_test.dart
tool-results/: bash_1783260753283_c2b798934131.txt  bash_1783395115599_8552468f2c8c.txt  bash_1783395152651_f4c5ce0371b6.txt  bash_1783395164185_a584d4cf48f9.txt  bash_1783399511207_a1d2e4dc8eac.txt  bash_1783400730167_f13b733bcea1.txt  bash_1783402685279_82e32c625629.txt  bash_1783402744336_dd8ff867ef73.txt  read_1783161930468_3b1480daed91.txt  read_1783161933531_a8a2a934f50e.txt
upload/: cloud_storage.html  my_library.html  now_playing.html  settings.html  sonic_cloud.md
web/: manifest.json
windows/: CMakeLists.txt
(+201 files in other folders)
